# taalquest_neighborhood

./: .gitignore  CLAUDE.md  README.md  README_WEB.md  api.js  app.js  cache.js  constants.js  index.html  package.json  pyproject.toml  styles.css  test_scenario.js
data/: chapters.json  characters.json  locations.json
server/: app.py  openai_client.py  pregenerate_scenario.py  requirements.txt
src/taalquest/: __init__.py  audio_player.py  main.py  models.py  script_generator.py  tts_generator.py
src/taalquest/ui/: __init__.py  game_window.py
web/: app.js  index.html  styles.css
