[project]
name = "taalquest-neighborhood"
version = "0.1.0"
description = "Audio-first A1 Dutch learning game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
]

[project.scripts]
taalquest = "taalquest.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taalquest"]

[dependency-groups]
dev = []
