[project]
name = "taalquest-neighborhood"
version = "0.1.0"
description = "Audio-first A1 Dutch learning game"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "flask>=3.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "flask-cors>=4.0.0",
]

[dependency-groups]
dev = []
